--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    MARK AIDEL RAY OLACO!!
+    MARK AIDEL RAY OLACO
 </body>
 </html>
